CSCI150_Project_Pages/mainStyleSheet.css
* {
    border: 0px;
    margin: 0px;
    padding: 0px;
    font-family: Arial;
}

body {
    background-color: white;
}

div.mainHolder {
    display: block;
}

img.logoText {
    display: none;
}

img.logoImage{
    display: none;
}

.navBar-container {
    width: 100%;
    display: table;
}

.navBar {
    background-color: #DB0032;
    width: 100%;
    height: auto%;
    overflow: auto;
    position: relative;
}

.navBar a {
    display: block;
    padding: 11px;
    float: none;
    color: white;
    text-align: center;
    text-decoration: none;
}

.navBar a:hover {
    background-color: #910323; /* on hover color #910323. DB0032 */
}

div.pageContent {
    padding: 20px;
    display: block;
}

div.leftSide {
    width: 100%;
}

div.rightSide {
    width: 100%;
}

div.textBox {
    width: 90%;
    margin: 0 auto;
    padding: 0px 10px;
    font-size: 12px;
    color: black;
    border: 1px solid black;
    border-collapse: collapse;
}


div.forumPreview {
    margin: 20px 0px;
    padding: 10px 0px;
    display: block;
    float: center;
    background-color: #D1D1D1;
    border: 1px solid black;
    border-collapse: collapse;
}

div.listingMenu {
    margin: 20px 0px;
    padding: 0px;
    display: block;
    float: center;
    background-color: #D1D1D1;
    border: 1px solid black;
    border-collapse: collapse;
}

div.listingMenu a {
    margin: 0;
    padding: 10px 0;
    width: 100%;
    display: block;
    float: center;
    color: black;
    text-align: center;
    text-decoration: none;
}

div.listingMenu a:hover{
    background-color: #A1A1A1;
}

div.newsFeed {
    display: flex;
    float: center;
    background-color: #D1D1D1;
    border: 1px solid black;
    border-collapse: collapse;
}

form {
    background-color: #b3b3b3;
    border: 1px solid #8a8a8a;
    width: 90%;
    margin: 0 auto;
    padding: 5px;
}

.loginBox {
    padding: 5px;
}

input[type=text], input[type=password] {
    width: 100%;
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #8a8a8a;
    box-sizing: border-box;
    background-color: rgba(100, 140, 190, 0.2); /*hexcode is #648DBE*/
}

input[type=submit] {
    width: 100%;
    background-color: #002E6D;
    color: white;
    padding: 16px 0 16px 0;
    border: 0px;
    font-weight: bold;
}

.forgotPass {
    padding: 5px;
    font-size: 16px;
}

div.newUser {
    background-color: #b3b3b3;
    border: 1px solid #8a8a8a;
    width: 90%;
    margin: 10px auto;
    padding: 5px;
    text-align: center;
}

@media screen and (min-width:768px) {
    div.mainHolder {
        padding-bottom: 50px;
    }

    img.logoText {
        /* based on a 2:1 image ratio*/
        display: inline-block;
        width: 150px;
        height: 75px;
    }

    img.logoImage{
        /* based on a 4:3 image ratio*/
        display: block;
        width: 100px;
        height:75px;
        float: right;
    }
    
    .navBar-container {
        width: 100%;
        display: block;
        padding-bottom: 50px;
    }
    
    .navBar {
        background-color: #DB0032;
        width: 100%;
        height: auto;
        overflow: auto;
        position: fixed;
        border: 1px solid black;
        border-collapse: collapse;
    }

    .navBar a {
        width: 20%; /* this changes with respect to the number of elements in the top bar */
        display: inline-block;
        margin: 0;
        padding: 16px 0 16px 0;
        float: left;
        font-size: 16px;
        color: white;
        text-align: center;
        text-decoration: none;
    }

    .navBar a:hover{
        background-color: #910323; /* on hover color #910323. DB0032 */
    }
    
    div.homePageContent {
        padding: 20px;
        display: flex;
    }
    
    div.pageContent {
        padding: 20px;
        display: block;
    }
    
    div.leftSide {
        flex: 50%;
    }
    
    div.rightSide {
        flex: 50%;
    }

    div.forumPreview {
        margin: 20px 0px;
        padding: 10px 0px;
        display: block;
        float: center;
        background-color: #D1D1D1;
        border: 1px solid black;
        border-collapse: collapse;
    }

    div.listingMenu {
        margin: 20px 0px;
        padding: 0px;
        display: block;
        float: center;
        background-color: #D1D1D1;
        border: 1px solid black;
        border-collapse: collapse;
    }

    div.listingMenu a {
        margin: 0;
        padding: 10px 0;
        width: 100%;
        display: block;
        float: center;
        color: black;
        text-align: center;
        text-decoration: none;
    }

    div.listingMenu a:hover{
        background-color: #A1A1A1;
    }

    div.newsFeed {
        padding: 10px;
        margin: 20px;
        display: flex;
        float: center;
        background-color: #D1D1D1;
        border: 1px solid black;
        border-collapse: collapse;
    }
    
    form {
        background-color: #b3b3b3;
        border: 1px solid #8a8a8a;
        width: 400px;
        margin: auto;
        padding: 5px;
    }

    .loginBox {
        padding: 20px;
    }

    input[type=text], input[type=password] {
        width: 100%;
        padding: 12px 20px;
        margin: 8px 0;
        display: inline-block;
        border: 1px solid #8a8a8a;
        box-sizing: border-box;
        background-color: rgba(100, 140, 190, 0.2); /*hexcode is #648DBE*/
        
    }

    input[type=submit] {
        width: 100%;
        background-color: #002E6D;
        color: white;
        padding: 16px 0 16px 0;
        border: 0px;
        font-weight: bold;
        
    }
    
    .forgotPass {
        padding: 20px 0px 0px 0px;
        font-size: 16px;
    }
    
    div.newUser {
        background-color: #b3b3b3;
        border: 1px solid #8a8a8a;
        width: 400px;
        margin: 20px auto;
        padding: 10px 5px 10px 5px;
    }
	
	table, th, td{
		border: 1px solid black;
		padding: 1px solid black;
	}
	
	.center{
		margin-left:auto;
		margin-right:auto;
	}
}

